--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                         style="-webkit-appearance: none;" />
                     <div
                         class="flex flex-row justify-center items-center space-x-4 px-8 lg:absolute lg:-top-8 lg:-right-5">
-                        <h1 class="text-4xl text-black font-extrabold" id="price">$16.00</h1>
-                        <p class="text-GrayishBlue text-xl font-bold" id="monthlyYearly">/month</p>
+                        <h1 class="text-3xl lg:text-4xl text-black font-extrabold" id="price">$16.00</h1>
+                        <p class="text-GrayishBlue text-sm lg:text-xl font-bold" id="monthlyYearly">/month</p>
                     </div>
 
                     <div class="flex flex-row justify-center items-center lg:space-x-6 space-x-3 lg:ps-5">
